k8s/ingress.yaml
apiVersion: networking.k8s.io/v1 # ingress resource for argocd
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.local
    http:
      paths:
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
